Fix some z-indexing for devlog spot on game pages.

--- a/src/app/views/discover/games/view/overview/overview.styl
+++ b/src/app/views/discover/games/view/overview/overview.styl
@@ -97,16 +97,16 @@
 		// The Shadow on bottom
 		&::after
 			top: auto
-			height: 130px
+			height: 80px
 			transition: opacity 500ms, transform 1000ms
 			pointer-events: none
 			background-image: linear-gradient( to bottom, rgba( $gj-blue, 0 ) 0%, rgba( $gj-blue, 0.2 ) 100% )
 			transform: translateY( 130px )
-			z-index: 2
+			z-index: 3
 
 		&-overlay
 			background-color: rgba( $black, 0.4 )
-			z-index: 1
+			z-index: 2
 			display: flex
 			justify-content: center
 			align-items: center
